RESOLVED FIXED135117
DatabaseProcess doesn't relaunch after crashing
https://bugs.webkit.org/show_bug.cgi?id=135117
Summary DatabaseProcess doesn't relaunch after crashing
Brady Eidson
Reported 2014-07-21 09:40:06 PDT
DatabaseProcess doesn't relaunch after crashing It needs to tell its WebContext when it crashes. <rdar://problem/17717343>
Attachments
Patch v1 (4.12 KB, patch)
2014-07-21 09:45 PDT, Brady Eidson
ap: review+
Brady Eidson
Comment 1 2014-07-21 09:45:19 PDT
Created attachment 235222 [details] Patch v1
Alexey Proskuryakov
Comment 2 2014-07-21 10:10:05 PDT
Comment on attachment 235222 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=235222&action=review > Source/WebKit2/UIProcess/WebContext.cpp:499 > + WebContextSupplementMap::const_iterator it = m_supplements.begin(); > + WebContextSupplementMap::const_iterator end = m_supplements.end(); > + for (; it != end; ++it) We can't have a C++11 loop here, can we?
Brady Eidson
Comment 3 2014-07-21 10:11:31 PDT
(In reply to comment #2) > (From update of attachment 235222 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=235222&action=review > > > Source/WebKit2/UIProcess/WebContext.cpp:499 > > + WebContextSupplementMap::const_iterator it = m_supplements.begin(); > > + WebContextSupplementMap::const_iterator end = m_supplements.end(); > > + for (; it != end; ++it) > > We can't have a C++11 loop here, can we? Considered it, decided on replicating the pattern used twice before. Now you've made me go back the other way. Will change.
Brady Eidson
Comment 4 2014-07-21 10:14:46 PDT
Darin Adler
Comment 5 2014-07-21 17:08:16 PDT
Comment on attachment 235222 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=235222&action=review >>> Source/WebKit2/UIProcess/WebContext.cpp:499 >>> + for (; it != end; ++it) >> >> We can't have a C++11 loop here, can we? > > Considered it, decided on replicating the pattern used twice before. Now you've made me go back the other way. Will change. It’s especially good if you use values().
Brady Eidson
Comment 6 2014-07-21 18:16:38 PDT
(In reply to comment #5) > (From update of attachment 235222 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=235222&action=review > > >>> Source/WebKit2/UIProcess/WebContext.cpp:499 > >>> + for (; it != end; ++it) > >> > >> We can't have a C++11 loop here, can we? > > > > Considered it, decided on replicating the pattern used twice before. Now you've made me go back the other way. Will change. > > It’s especially good if you use values(). That definitely would've been even better than what I landed.
Note You need to log in before you can comment on or make changes to this bug.